--- a/AnimatedHappiness.Benchmarks/AnimatedHappiness.Benchmarks.csproj
+++ b/AnimatedHappiness.Benchmarks/AnimatedHappiness.Benchmarks.csproj
@@ -6,8 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.4.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.3" />
   </ItemGroup>
 
   <ItemGroup>
